--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="alert('Hola')">Saludar</button>
+    <script src="eventos.js"></script>
+   <div class="button-container">
+     <button id="greetingButton">Saludar</button>
+     </div>
+
+     <style>
+        .button-container {
+             padding: 5px;
+             background-color: green; }
+     </style>
 </body>
 </html>
